<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/EcommerceTheme"
    tools:context=".checkoutPayment.ShippingActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/abl_cart_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/abl_cart_appbar"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_x"
        android:paddingRight="@dimen/margin_x">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="40dp"
                android:paddingTop="@dimen/fab_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#4b4b4b"
                    android:text="Shipping Address"/>

                <!--START OF SHIPPING METHOD CONATINER-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <!--START OF SHIPPING METHOD-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_marginLeft="@dimen/fab_margin_quarter"
                        android:layout_marginRight="@dimen/fab_margin_quarter"
                        android:layout_weight="1"
                        android:background="@drawable/checkout_item_bg_active"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/fab_margin"
                        android:paddingLeft="@dimen/fab_margin_half"
                        android:paddingRight="@dimen/fab_margin_half"
                        android:paddingTop="@dimen/fab_margin">

                        <ImageView
                            android:layout_width="match_parent"

                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/fab_margin_half"
                            android:layout_marginRight="@dimen/fab_margin_half"
                            android:adjustViewBounds="true"
                            android:src="@drawable/logo_fedex" />

                        <TextView
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/fab_margin_half"
                            android:text="@string/shipping_ups"
                            android:textSize="@dimen/heading_small" />

                        <TextView
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/fab_margin_quarter"
                            android:text="@string/shipping_cost_dhl"
                            android:textAlignment="center"
                            android:textColor="@color/fontLiteColor"
                            android:textSize="@dimen/heading_x_small" />

                    </LinearLayout>
                    <!--END OF SHIPPING METHOD-->


                    <!--START OF SHIPPING METHOD-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_marginLeft="@dimen/fab_margin_quarter"
                        android:layout_marginRight="@dimen/fab_margin_quarter"
                        android:layout_weight="1"
                        android:background="@drawable/checkout_item_bg"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/fab_margin"
                        android:paddingLeft="@dimen/fab_margin_half"
                        android:paddingRight="@dimen/fab_margin_half"
                        android:paddingTop="@dimen/fab_margin">

                        <ImageView
                            android:layout_width="match_parent"

                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/fab_margin_half"
                            android:layout_marginRight="@dimen/fab_margin_half"
                            android:adjustViewBounds="true"
                            android:src="@drawable/logo_dhl" />

                        <TextView
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/fab_margin_half"
                            android:text="@string/shipping_dhl"
                            android:textSize="@dimen/heading_small" />

                        <TextView
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/fab_margin_quarter"
                            android:text="@string/shipping_cost_dhl"
                            android:textAlignment="center"
                            android:textColor="@color/fontLiteColor"
                            android:textSize="@dimen/heading_x_small" />

                    </LinearLayout>
                    <!--END OF SHIPPING METHOD-->


                    <!--START OF SHIPPING METHOD-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_marginLeft="@dimen/fab_margin_quarter"
                        android:layout_marginRight="@dimen/fab_margin_quarter"
                        android:layout_weight="1"
                        android:background="@drawable/checkout_item_bg"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/fab_margin"
                        android:paddingLeft="@dimen/fab_margin_half"
                        android:paddingRight="@dimen/fab_margin_half"
                        android:paddingTop="@dimen/fab_margin">

                        <ImageView
                            android:layout_width="match_parent"

                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/fab_margin_half"
                            android:layout_marginRight="@dimen/fab_margin_half"
                            android:adjustViewBounds="true"
                            android:src="@drawable/logo_fedex" />

                        <TextView
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/fab_margin_half"
                            android:text="@string/shipping_fedex"
                            android:textSize="@dimen/heading_small" />

                        <TextView
                            android:layout_width="wrap_content"

                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/fab_margin_quarter"
                            android:text="@string/shipping_cost_fedex"
                            android:textAlignment="center"
                            android:textColor="@color/fontLiteColor"
                            android:textSize="@dimen/heading_x_small" />

                    </LinearLayout>
                    <!--END OF SHIPPING METHOD-->

                </LinearLayout>
                <!--END OF SHIPPING METHOD CONATINER-->


                <LinearLayout style="@style/AddressFormConatinerHalf">

                    <!--START OF EDITTEXT : FIRST NAME-->
                    <LinearLayout
                        style="@style/AddressFormConatiner"
                        android:layout_marginRight="@dimen/fab_margin_half">

                        <TextView
                            style="@style/TVAddressForm"
                            android:text="@string/input_first_name" />

                        <EditText
                            android:id="@+id/et_shipping_first_name"
                            style="@style/ETAddressForm" />

                    </LinearLayout>
                    <!--START OF EDITTEXT : FIRST NAME-->

                    <!--START OF EDITTEXT : LAST NAME-->
                    <LinearLayout
                        style="@style/AddressFormConatiner"
                        android:layout_marginLeft="@dimen/fab_margin_half">

                        <TextView
                            style="@style/TVAddressForm"
                            android:text="@string/input_last_name" />

                        <EditText
                            android:id="@+id/et_shipping_last_name"
                            style="@style/ETAddressForm" />
                    </LinearLayout>
                    <!--END OF EDITTEXT : LAST NAME-->

                </LinearLayout>


                <!--START OF EDITTEXT : ADDRESS LINE 1-->
                <LinearLayout style="@style/AddressFormConatinerFull">

                    <TextView
                        style="@style/TVAddressForm"
                        android:text="@string/input_address_1" />

                    <EditText
                        android:id="@+id/et_shipping_address_1"
                        style="@style/ETAddressForm" />

                </LinearLayout>
                <!--END OF EDITTEXT : ADDRESLINE 1-->

                <!--START OF EDITTEXT : ADDRESLINE 2-->
                <LinearLayout style="@style/AddressFormConatinerFull">

                    <TextView
                        style="@style/TVAddressForm"
                        android:text="@string/input_address_2" />

                    <EditText
                        android:id="@+id/et_shipping_address_2"
                        style="@style/ETAddressForm" />

                </LinearLayout>
                <!--END OF EDITTEXT : ADDRESLINE 2-->


                <LinearLayout style="@style/AddressFormConatinerHalf">

                    <!--START OF EDITTEXT : CITY-->
                    <LinearLayout
                        style="@style/AddressFormConatiner"
                        android:layout_marginRight="@dimen/fab_margin_half">

                        <TextView
                            style="@style/TVAddressForm"
                            android:text="@string/input_city" />

                        <EditText
                            android:id="@+id/et_shipping_city"
                            style="@style/ETAddressForm" />
                    </LinearLayout>
                    <!--END OF EDITTEXT : CITY-->

                    <!--START OF EDITTEXT : ZIP CODE-->
                    <LinearLayout
                        style="@style/AddressFormConatiner"
                        android:layout_marginLeft="@dimen/fab_margin_half">

                        <TextView
                            style="@style/TVAddressForm"
                            android:text="@string/input_zip" />

                        <EditText
                            android:id="@+id/et_shipping_zip"
                            style="@style/ETAddressForm" />
                    </LinearLayout>
                    <!--END OF EDITTEXT : ZIP CODE-->

                </LinearLayout>


                <LinearLayout style="@style/AddressFormConatinerHalf">

                    <!--START OF EDITTEXT : STATE-->
                    <LinearLayout
                        style="@style/AddressFormConatiner"
                        android:layout_marginRight="@dimen/fab_margin_half">

                        <TextView
                            style="@style/TVAddressForm"
                            android:text="@string/input_state" />

                        <EditText
                            android:id="@+id/et_shipping_state"
                            style="@style/ETAddressForm" />
                    </LinearLayout>
                    <!--END OF EDITTEXT : STATE-->

                    <!--START OF EDITTEXT : COUNTRY-->
                    <LinearLayout
                        style="@style/AddressFormConatiner"
                        android:layout_marginLeft="@dimen/fab_margin_half">

                        <TextView
                            style="@style/TVAddressForm"
                            android:text="@string/input_country"
                            android:visibility="gone"/>

                        <EditText
                            android:id="@+id/et_shipping_country"
                            android:visibility="gone"
                            style="@style/ETAddressForm" />
                    </LinearLayout>
                    <!--END OF EDITTEXT : COUNTRY-->

                </LinearLayout>


                <FrameLayout
                    android:id="@+id/btn_complete_address"

                    style="@style/BtnWithIconLeftContainer"
                    android:layout_marginTop="@dimen/fab_margin_half"
                    android:background="@drawable/btn_round_small_primary">

                    <Button
                        android:id="@+id/btn_complete_address_inner"
                        style="@style/BtnWithIconLeft"

                        android:text="@string/btn_next" />

                </FrameLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        android:visibility="gone"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>